--- a/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
@@ -6755,7 +6755,7 @@ spec:
                       type: array
                     defaultEditor:
                       description: The default editor to workspace create with. It
-                        could be a plugin ID or a URI. The plugin ID must have `publisher/plugin/version`
+                        could be a plugin ID or a URI. The plugin ID must have `publisher/name/version`
                         format. The URI must start from `http://` or `https://`.
                       type: string
                     defaultNamespace:
@@ -6785,7 +6785,8 @@ spec:
                         properties:
                           editor:
                             description: The editor ID to specify default plug-ins
-                              for.
+                              for. The plugin ID must have `publisher/name/version`
+                              format.
                             type: string
                           plugins:
                             description: Default plug-in URIs for the specified editor.
