--- a/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
@@ -46,6 +46,7 @@ metadata:
                 }
               ],
               "externalDevfileRegistry": true,
+              "externalPluginRegistry": true,
               "workspaceNamespaceDefault": "<username>-che"
             },
             "storage": {
@@ -69,6 +70,9 @@ metadata:
                     "url": "https://registry.devfile.io"
                   }
                 ]
+              },
+              "pluginRegistry": {
+                "disableInternalRegistry": true
               }
             },
             "containerRegistry": {},
@@ -100,7 +104,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che.v7.87.0-870.next
+  name: eclipse-che.v7.87.0-871.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -1032,7 +1036,7 @@ spec:
   minKubeVersion: 1.19.0
   provider:
     name: Eclipse Foundation
-  version: 7.87.0-870.next
+  version: 7.87.0-871.next
   webhookdefinitions:
     - admissionReviewVersions:
         - v1
