ci: Update Helm Charts to 7.87.0
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/helmcharts/stable/Chart.yaml
+++ b/helmcharts/stable/Chart.yaml
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2019-2023 Red Hat, Inc.
+# Copyright (c) 2019-2024 Red Hat, Inc.
 # This program and the accompanying materials are made
 # available under the terms of the Eclipse Public License 2.0
 # which is available at https://www.eclipse.org/legal/epl-2.0/
@@ -13,7 +13,7 @@
 apiVersion: v1
 description: A Helm chart for deploying Eclipse Che on a Kubernetes
 name: eclipse-che
-version: 7.86.0
+version: 7.87.0
 annotations:
   artifacthub.io/license: EPL-2.0
   artifacthub.io/links: |
@@ -35,10 +35,10 @@ annotations:
   artifacthub.io/operatorCapabilities: Seamless Upgrades
   artifacthub.io/crdsExamples: "- apiVersion: org.eclipse.che/v2\n  kind: CheCluster\n\
     \  metadata:\n    name: eclipse-che\n    namespace: eclipse-che\n  spec:\n   \
-    \ components:\n      devfileRegistry:\n        disableInternalRegistry: true\n\
-    \        externalDevfileRegistries:\n          - url: 'https://registry.devfile.io'\n\
-    \    devEnvironments: {}\n    networking: {}\n    containerRegistry: {}\n    gitServices:\
-    \ {}\n"
+    \ components:\n      pluginRegistry:\n        disableInternalRegistry: true\n\
+    \      devfileRegistry:\n        disableInternalRegistry: true\n        externalDevfileRegistries:\n\
+    \          - url: 'https://registry.devfile.io'\n    devEnvironments: {}\n   \
+    \ networking: {}\n    containerRegistry: {}\n    gitServices: {}\n"
   artifacthub.io/crds: |-
     - kind: CheCluster
       version: v2
