--- a/bundle/stable/eclipse-che/manifests/che-operator-service_v1_service.yaml
+++ b/bundle/stable/eclipse-che/manifests/che-operator-service_v1_service.yaml
@@ -10,20 +10,22 @@
 #   Red Hat, Inc. - initial API and implementation
 #
 
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
+apiVersion: v1
+kind: Service
 metadata:
+  creationTimestamp: null
   labels:
     app.kubernetes.io/component: che-operator
     app.kubernetes.io/instance: che
+    app.kubernetes.io/managed-by: olm
     app.kubernetes.io/name: che
     app.kubernetes.io/part-of: che.eclipse.org
-  name: che-operator
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: che-operator
-subjects:
-- kind: ServiceAccount
-  name: che-operator
-  namespace: eclipse-che
+  name: che-operator-service
+spec:
+  ports:
+  - port: 443
+    targetPort: 9443
+  selector:
+    app: che-operator
+status:
+  loadBalancer: {}
