--- a/bundle/stable/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/stable/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
@@ -85,7 +85,7 @@ metadata:
     capabilities: Seamless Upgrades
     categories: Developer Tools
     certified: "false"
-    containerImage: quay.io/eclipse/che-operator:7.88.0
+    containerImage: quay.io/eclipse/che-operator@sha256:5f546550ea8ea454b22879277d08d1db8116d23a39320f2530a6e7146117a9f3
     createdAt: "2024-06-28T16:27:50Z"
     description: A Kube-native development solution that delivers portable and collaborative
       developer workspaces.
@@ -876,29 +876,29 @@ spec:
                       - name: CHE_VERSION
                         value: 7.88.0
                       - name: RELATED_IMAGE_che_server
-                        value: quay.io/eclipse/che-server:7.88.0
+                        value: quay.io/eclipse/che-server@sha256:48c0e2ba2402f9cd33e3820817ca453f6bc15e8a5cce40e8fea45bb6c44e0527
                       - name: RELATED_IMAGE_dashboard
-                        value: quay.io/eclipse/che-dashboard:7.88.0
+                        value: quay.io/eclipse/che-dashboard@sha256:c3b6d861fbbe6ded7fa01e250b2f9726d59e6f9305cb0cade8ea7a8f98bee4ba
                       - name: RELATED_IMAGE_plugin_registry
-                        value: quay.io/eclipse/che-plugin-registry:7.88.0
+                        value: quay.io/eclipse/che-plugin-registry@sha256:7d815c2229c8fb4e083591e7a8980d4e9091861eea2c281595836e5286b927a2
                       - name: RELATED_IMAGE_devfile_registry
-                        value: quay.io/eclipse/che-devfile-registry:7.88.0
+                        value: quay.io/eclipse/che-devfile-registry@sha256:1b009db27e3ca5ceb554bc6d99fa018cd77108d9cb761a3c84acbf81cb241628
                       - name: RELATED_IMAGE_che_tls_secrets_creation_job
-                        value: quay.io/eclipse/che-tls-secret-creator:alpine-01a4c34
+                        value: quay.io/eclipse/che-tls-secret-creator@sha256:54df0ccf598d230e278d512c3b44bdf24edb280f71da32643db46e0120bfaee0
                       - name: RELATED_IMAGE_single_host_gateway
-                        value: quay.io/eclipse/che--traefik:v2.9.10-8d81a9df1435f9f3d36ac9398465ef2d5d61e671059974db753faaed14b627de
+                        value: quay.io/eclipse/che--traefik@sha256:8d81a9df1435f9f3d36ac9398465ef2d5d61e671059974db753faaed14b627de
                       - name: RELATED_IMAGE_single_host_gateway_config_sidecar
-                        value: quay.io/che-incubator/configbump:7.88.0
+                        value: quay.io/che-incubator/configbump@sha256:7924e8eb3e6feb91b7c46841320ec9992c364c1f5bf0176f99eb2e03fa1d81b3
                       - name: RELATED_IMAGE_gateway_authentication_sidecar
-                        value: quay.io/openshift/origin-oauth-proxy:4.9
+                        value: quay.io/openshift/origin-oauth-proxy@sha256:870bfe92a4663720775c0dfe5728ecbb10a17f0644eef5f57276ec135034c6a1
                       - name: RELATED_IMAGE_gateway_authorization_sidecar
-                        value: quay.io/openshift/origin-kube-rbac-proxy:4.9
+                        value: quay.io/openshift/origin-kube-rbac-proxy@sha256:354fc75eb7a21a934381e93d03ef9d42bc2c8ae8989fdcacecfb39b863b96ced
                       - name: RELATED_IMAGE_gateway_authentication_sidecar_k8s
-                        value: quay.io/oauth2-proxy/oauth2-proxy:v7.4.0
+                        value: quay.io/oauth2-proxy/oauth2-proxy@sha256:393e63c3b924e3f78a5b592ad647417af4ea229398b7bebbbd7ef3d6181aceb5
                       - name: RELATED_IMAGE_gateway_authorization_sidecar_k8s
-                        value: quay.io/brancz/kube-rbac-proxy:v0.13.1
+                        value: quay.io/brancz/kube-rbac-proxy@sha256:738c854322f56d63ebab75de5210abcdd5e0782ce2d30c0ecd4620f63b24694d
                       - name: RELATED_IMAGE_gateway_header_sidecar
-                        value: quay.io/che-incubator/header-rewrite-proxy:latest
+                        value: quay.io/che-incubator/header-rewrite-proxy@sha256:bd7873b8feef35f218f54c6251ea224bea2c8bf202a328230019a0ba2941245d
                       - name: CHE_FLAVOR
                         value: che
                       - name: CONSOLE_LINK_NAME
@@ -916,7 +916,7 @@ spec:
                         value: che-incubator/che-code/latest
                       - name: CHE_DEFAULT_SPEC_DEVENVIRONMENTS_DEFAULTCOMPONENTS
                         value: '[{"name": "universal-developer-image", "container":
-                          {"image": "quay.io/devfile/universal-developer-image:ubi8-latest"}}]'
+                          {"image": "quay.io/devfile/universal-developer-image@sha256:742bf25cb1429d9c2177b611f516e9053c8858d0fa90cc6a561bdf822ae9539e"}}]'
                       - name: CHE_DEFAULT_SPEC_COMPONENTS_PLUGINREGISTRY_OPENVSXURL
                         value: https://open-vsx.org
                       - name: CHE_DEFAULT_SPEC_DEVENVIRONMENTS_DISABLECONTAINERBUILDCAPABILITIES
@@ -925,30 +925,48 @@ spec:
                         value: '{"allowPrivilegeEscalation": true,"capabilities":
                           {"add": ["SETGID", "SETUID"]}}'
                       - name: RELATED_IMAGE_editor_definition_che_idea_next_che_idea_runtime_description
-                        value: quay.io/devfile/universal-developer-image:latest
+                        value: quay.io/devfile/universal-developer-image@sha256:742bf25cb1429d9c2177b611f516e9053c8858d0fa90cc6a561bdf822ae9539e
                       - name: RELATED_IMAGE_editor_definition_che_idea_next_che_idea_injector
                         value: quay.io/che-incubator/che-idea:next
                       - name: RELATED_IMAGE_editor_definition_che_code_insiders_che_code_injector
-                        value: quay.io/che-incubator/che-code:insiders
+                        value: quay.io/che-incubator/che-code@sha256:f24b9538fd50d63f665fec700e1d0f02ae451e103b138b600bd0fd944f51abbf
                       - name: RELATED_IMAGE_editor_definition_che_code_insiders_che_code_runtime_description
-                        value: quay.io/devfile/universal-developer-image:latest
+                        value: quay.io/devfile/universal-developer-image@sha256:742bf25cb1429d9c2177b611f516e9053c8858d0fa90cc6a561bdf822ae9539e
                       - name: RELATED_IMAGE_editor_definition_che_idea_latest_che_idea_runtime_description
-                        value: quay.io/devfile/universal-developer-image:latest
+                        value: quay.io/devfile/universal-developer-image@sha256:742bf25cb1429d9c2177b611f516e9053c8858d0fa90cc6a561bdf822ae9539e
                       - name: RELATED_IMAGE_editor_definition_che_idea_latest_che_idea_injector
-                        value: quay.io/che-incubator/che-idea:latest
+                        value: quay.io/che-incubator/che-idea@sha256:8aae69dc4b0c122491a75400639af0fe92b5e214c6e68ac97cda29fb58b44151
                       - name: RELATED_IMAGE_editor_definition_che_idea_server_next_editor_injector
                         value: quay.io/che-incubator/che-idea-dev-server:next
                       - name: RELATED_IMAGE_editor_definition_che_idea_server_next_editor_runtime
-                        value: quay.io/devfile/universal-developer-image:latest
+                        value: quay.io/devfile/universal-developer-image@sha256:742bf25cb1429d9c2177b611f516e9053c8858d0fa90cc6a561bdf822ae9539e
                       - name: RELATED_IMAGE_editor_definition_che_idea_server_latest_editor_injector
-                        value: quay.io/che-incubator/che-idea-dev-server:latest
+                        value: quay.io/che-incubator/che-idea-dev-server@sha256:55d433645dec56ea178df03f466623e045fde046e1cb43b37493999bdb9494de
                       - name: RELATED_IMAGE_editor_definition_che_idea_server_latest_editor_runtime
-                        value: quay.io/devfile/universal-developer-image:latest
+                        value: quay.io/devfile/universal-developer-image@sha256:742bf25cb1429d9c2177b611f516e9053c8858d0fa90cc6a561bdf822ae9539e
                       - name: RELATED_IMAGE_editor_definition_che_code_latest_che_code_injector
-                        value: quay.io/che-incubator/che-code:7.88.0
+                        value: quay.io/che-incubator/che-code@sha256:746f735943025473aa3a0602d4841cacf09c6d5626100c1c4865d7550cc1cc8e
                       - name: RELATED_IMAGE_editor_definition_che_code_latest_che_code_runtime_description
-                        value: quay.io/devfile/universal-developer-image:latest
-                    image: quay.io/eclipse/che-operator:7.88.0
+                        value: quay.io/devfile/universal-developer-image@sha256:742bf25cb1429d9c2177b611f516e9053c8858d0fa90cc6a561bdf822ae9539e
+                      - name: RELATED_IMAGE_che_code_devfile_registry_image_NFXHG2LEMVZHG___
+                        value: quay.io/che-incubator/che-code@sha256:f24b9538fd50d63f665fec700e1d0f02ae451e103b138b600bd0fd944f51abbf
+                      - name: RELATED_IMAGE_che_code_devfile_registry_image_IBZWQYJSGU3DUNZUGZTDOMZVHE2DGMBSGU2DOM3BMEZWCMBWGAZGINBYGQYWGYLDMYYDSYZWMQ2TMMRWGEYDAYZRMM2DQNRVMQ3TKNJQMNRTCY3DHBSQ____
+                        value: quay.io/che-incubator/che-code@sha256:746f735943025473aa3a0602d4841cacf09c6d5626100c1c4865d7550cc1cc8e
+                      - name: RELATED_IMAGE_universal_developer_image_devfile_registry_image_OVRGSOBNNRQXIZLTOQ______
+                        value: quay.io/devfile/universal-developer-image@sha256:742bf25cb1429d9c2177b611f516e9053c8858d0fa90cc6a561bdf822ae9539e
+                      - name: RELATED_IMAGE_universal_developer_image_devfile_registry_image_IBZWQYJSGU3DUNZUGJRGMMRVMNRDCNBSHFSDSYZSGE3TOYRWGEYWMNJRGZSTSMBVGNRTQOBVHBSDAZTBHEYGGYZWME2TMMLCMRTDQMRSMFSTSNJTHFSQ____
+                        value: quay.io/devfile/universal-developer-image@sha256:742bf25cb1429d9c2177b611f516e9053c8858d0fa90cc6a561bdf822ae9539e
+                      - name: RELATED_IMAGE_che__centos__mongodb_36_centos7_devfile_registry_image_NRQXIZLTOQWWCOJRGVSGEN3CMVRWCOBXGE4TQZTDMQ3TQNRQGA4DMOJYHFTGKODBGMZDOYJRME2GMNRVGA4DAMRVMI3DIYLCGI4GMY3DG42DEM3CGI______
+                        value: quay.io/eclipse/che--centos--mongodb-36-centos7@sha256:a915db7beca87198fcd7860086989fe8a327a1a4f6508025b64ab28fcc7423b2
+                      - name: RELATED_IMAGE_che__centos__mongodb_36_centos7_devfile_registry_image_NRQXIZLTOQWWMZTEMYZDIMZRMJRGGNTEHFQTSZBSMEYDGZJZGVRGEYTFHBQWIYRUHFQWEOLFMFRTGMBRMYZDMODBGM2TAMZYMM4DIMRYHAZDKOLDGE______
+                        value: quay.io/eclipse/che--centos--mongodb-36-centos7@sha256:ffdf2431bbc6d9a9d2a03e95bbbe8adb49ab9eac301f268a35038c84288259c1
+                      - name: RELATED_IMAGE_che__centos__mysql_57_centos7_devfile_registry_image_NRQXIZLTOQWWKMBYMVSTIZBUGNRDOMZVGY3DANZWHA2WENRZMJSGKNRTGM2WKMRXMNTDEMDDGAZDAZRTGQ2WENTDGZRTKOJUGAYDCOBTHA4DENZWGQ______
+                        value: quay.io/eclipse/che--centos--mysql-57-centos7@sha256:e08ee4d43b7356607685b69bde6335e27cf20c020f345b6c6c59400183882764
+                      - name: RELATED_IMAGE_che__mariadb_devfile_registry_image_GEYC4NZOGEWTKYJYGAYDSMZWHFSWKNJXMM4DKYRWMY2GCMBYGQYDMMJUG5RGIOLDGUYDKY3EMU3GEOBSGUYGIMJWMEZDOZBSME2WMZLCMZSGKYLEG4______
+                        value: quay.io/eclipse/che--mariadb@sha256:5a8009369ee57c85b6f4a08406147bd9c505cde6b8250d16a27d2a5febfdead7
+                      - name: RELATED_IMAGE_ubi_minimal_devfile_registry_image_
+                        value: registry.access.redhat.com/ubi8/ubi-minimal@sha256:5f1cd3422d5d46aea35dac80825dbcbd58213eef49c317f42a394345fb4e8ff1
+                    image: quay.io/eclipse/che-operator@sha256:5f546550ea8ea454b22879277d08d1db8116d23a39320f2530a6e7146117a9f3
                     imagePullPolicy: IfNotPresent
                     livenessProbe:
                       failureThreshold: 10
@@ -1116,3 +1134,82 @@ spec:
       targetPort: 9443
       type: ConversionWebhook
       webhookPath: /convert
+  relatedImages:
+    - name: che-operator-7.88.0
+      image: quay.io/eclipse/che-operator@sha256:5f546550ea8ea454b22879277d08d1db8116d23a39320f2530a6e7146117a9f3
+      # tag: quay.io/eclipse/che-operator:7.88.0
+    - name: kube-rbac-proxy-v0.13.1
+      image: quay.io/brancz/kube-rbac-proxy@sha256:738c854322f56d63ebab75de5210abcdd5e0782ce2d30c0ecd4620f63b24694d
+      # tag: quay.io/brancz/kube-rbac-proxy:v0.13.1
+    - name: che-code-7.88.0
+      image: quay.io/che-incubator/che-code@sha256:746f735943025473aa3a0602d4841cacf09c6d5626100c1c4865d7550cc1cc8e
+      # tag: quay.io/che-incubator/che-code:7.88.0
+    - name: che-code-insiders
+      image: quay.io/che-incubator/che-code@sha256:f24b9538fd50d63f665fec700e1d0f02ae451e103b138b600bd0fd944f51abbf
+      # tag: quay.io/che-incubator/che-code:insiders
+    - name: che-idea-dev-server-latest
+      image: quay.io/che-incubator/che-idea-dev-server@sha256:55d433645dec56ea178df03f466623e045fde046e1cb43b37493999bdb9494de
+      # tag: quay.io/che-incubator/che-idea-dev-server:latest
+    - name: che-idea-latest
+      image: quay.io/che-incubator/che-idea@sha256:8aae69dc4b0c122491a75400639af0fe92b5e214c6e68ac97cda29fb58b44151
+      # tag: quay.io/che-incubator/che-idea:latest
+    - name: configbump-7.88.0
+      image: quay.io/che-incubator/configbump@sha256:7924e8eb3e6feb91b7c46841320ec9992c364c1f5bf0176f99eb2e03fa1d81b3
+      # tag: quay.io/che-incubator/configbump:7.88.0
+    - name: header-rewrite-proxy-latest
+      image: quay.io/che-incubator/header-rewrite-proxy@sha256:bd7873b8feef35f218f54c6251ea224bea2c8bf202a328230019a0ba2941245d
+      # tag: quay.io/che-incubator/header-rewrite-proxy:latest
+    - name: universal-developer-image-latest
+      image: quay.io/devfile/universal-developer-image@sha256:742bf25cb1429d9c2177b611f516e9053c8858d0fa90cc6a561bdf822ae9539e
+      # tag: quay.io/devfile/universal-developer-image:latest
+    - name: che--traefik-v2.9.10-8d81a9df1435f9f3d36ac9398465ef2d5d61e671059974db753faaed14b627de
+      image: quay.io/eclipse/che--traefik@sha256:8d81a9df1435f9f3d36ac9398465ef2d5d61e671059974db753faaed14b627de
+      # tag: quay.io/eclipse/che--traefik:v2.9.10-8d81a9df1435f9f3d36ac9398465ef2d5d61e671059974db753faaed14b627de
+    - name: che-dashboard-7.88.0
+      image: quay.io/eclipse/che-dashboard@sha256:c3b6d861fbbe6ded7fa01e250b2f9726d59e6f9305cb0cade8ea7a8f98bee4ba
+      # tag: quay.io/eclipse/che-dashboard:7.88.0
+    - name: che-devfile-registry-7.88.0
+      image: quay.io/eclipse/che-devfile-registry@sha256:1b009db27e3ca5ceb554bc6d99fa018cd77108d9cb761a3c84acbf81cb241628
+      # tag: quay.io/eclipse/che-devfile-registry:7.88.0
+    - name: che-plugin-registry-7.88.0
+      image: quay.io/eclipse/che-plugin-registry@sha256:7d815c2229c8fb4e083591e7a8980d4e9091861eea2c281595836e5286b927a2
+      # tag: quay.io/eclipse/che-plugin-registry:7.88.0
+    - name: che-server-7.88.0
+      image: quay.io/eclipse/che-server@sha256:48c0e2ba2402f9cd33e3820817ca453f6bc15e8a5cce40e8fea45bb6c44e0527
+      # tag: quay.io/eclipse/che-server:7.88.0
+    - name: che-tls-secret-creator-alpine-01a4c34
+      image: quay.io/eclipse/che-tls-secret-creator@sha256:54df0ccf598d230e278d512c3b44bdf24edb280f71da32643db46e0120bfaee0
+      # tag: quay.io/eclipse/che-tls-secret-creator:alpine-01a4c34
+    - name: oauth2-proxy-v7.4.0
+      image: quay.io/oauth2-proxy/oauth2-proxy@sha256:393e63c3b924e3f78a5b592ad647417af4ea229398b7bebbbd7ef3d6181aceb5
+      # tag: quay.io/oauth2-proxy/oauth2-proxy:v7.4.0
+    - name: origin-kube-rbac-proxy-4.9
+      image: quay.io/openshift/origin-kube-rbac-proxy@sha256:354fc75eb7a21a934381e93d03ef9d42bc2c8ae8989fdcacecfb39b863b96ced
+      # tag: quay.io/openshift/origin-kube-rbac-proxy:4.9
+    - name: origin-oauth-proxy-4.9
+      image: quay.io/openshift/origin-oauth-proxy@sha256:870bfe92a4663720775c0dfe5728ecbb10a17f0644eef5f57276ec135034c6a1
+      # tag: quay.io/openshift/origin-oauth-proxy:4.9
+    - name: che-code-@sha256:746f735943025473aa3a0602d4841cacf09c6d5626100c1c4865d7550cc1cc8e
+      image: quay.io/che-incubator/che-code@sha256:746f735943025473aa3a0602d4841cacf09c6d5626100c1c4865d7550cc1cc8e
+      # tag: quay.io/che-incubator/che-code@sha256:746f735943025473aa3a0602d4841cacf09c6d5626100c1c4865d7550cc1cc8e
+    - name: universal-developer-image-ubi8-latest
+      image: quay.io/devfile/universal-developer-image@sha256:742bf25cb1429d9c2177b611f516e9053c8858d0fa90cc6a561bdf822ae9539e
+      # tag: quay.io/devfile/universal-developer-image:ubi8-latest
+    - name: universal-developer-image-@sha256:742bf25cb1429d9c2177b611f516e9053c8858d0fa90cc6a561bdf822ae9539e
+      image: quay.io/devfile/universal-developer-image@sha256:742bf25cb1429d9c2177b611f516e9053c8858d0fa90cc6a561bdf822ae9539e
+      # tag: quay.io/devfile/universal-developer-image@sha256:742bf25cb1429d9c2177b611f516e9053c8858d0fa90cc6a561bdf822ae9539e
+    - name: che--centos--mongodb-36-centos7-latest-a915db7beca87198fcd7860086989fe8a327a1a4f6508025b64ab28fcc7423b2
+      image: quay.io/eclipse/che--centos--mongodb-36-centos7@sha256:a915db7beca87198fcd7860086989fe8a327a1a4f6508025b64ab28fcc7423b2
+      # tag: quay.io/eclipse/che--centos--mongodb-36-centos7:latest-a915db7beca87198fcd7860086989fe8a327a1a4f6508025b64ab28fcc7423b2
+    - name: che--centos--mongodb-36-centos7-latest-ffdf2431bbc6d9a9d2a03e95bbbe8adb49ab9eac301f268a35038c84288259c1
+      image: quay.io/eclipse/che--centos--mongodb-36-centos7@sha256:ffdf2431bbc6d9a9d2a03e95bbbe8adb49ab9eac301f268a35038c84288259c1
+      # tag: quay.io/eclipse/che--centos--mongodb-36-centos7:latest-ffdf2431bbc6d9a9d2a03e95bbbe8adb49ab9eac301f268a35038c84288259c1
+    - name: che--centos--mysql-57-centos7-latest-e08ee4d43b7356607685b69bde6335e27cf20c020f345b6c6c59400183882764
+      image: quay.io/eclipse/che--centos--mysql-57-centos7@sha256:e08ee4d43b7356607685b69bde6335e27cf20c020f345b6c6c59400183882764
+      # tag: quay.io/eclipse/che--centos--mysql-57-centos7:latest-e08ee4d43b7356607685b69bde6335e27cf20c020f345b6c6c59400183882764
+    - name: che--mariadb-10.7.1-5a8009369ee57c85b6f4a08406147bd9c505cde6b8250d16a27d2a5febfdead7
+      image: quay.io/eclipse/che--mariadb@sha256:5a8009369ee57c85b6f4a08406147bd9c505cde6b8250d16a27d2a5febfdead7
+      # tag: quay.io/eclipse/che--mariadb:10.7.1-5a8009369ee57c85b6f4a08406147bd9c505cde6b8250d16a27d2a5febfdead7
+    - name: ubi-minimal-
+      image: registry.access.redhat.com/ubi8/ubi-minimal@sha256:5f1cd3422d5d46aea35dac80825dbcbd58213eef49c317f42a394345fb4e8ff1
+      # tag: registry.access.redhat.com/ubi8/ubi-minimal
