ci: Add new 7.88.0 bundle to a catalog
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -81,3 +81,5 @@ entries:
     replaces: eclipse-che.v7.85.0
   - name: eclipse-che.v7.87.0
     replaces: eclipse-che.v7.86.0
+  - name: eclipse-che.v7.88.0
+    replaces: eclipse-che.v7.87.0
