ci: Add new 7.89.0 bundle to a catalog
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -83,3 +83,5 @@ entries:
     replaces: eclipse-che.v7.86.0
   - name: eclipse-che.v7.88.0
     replaces: eclipse-che.v7.87.0
+  - name: eclipse-che.v7.89.0
+    replaces: eclipse-che.v7.88.0
