chore: use per-workspace storage for Che-Operator devfile
Signed-off-by: Andrew Obuchowicz <aobuchow@redhat.com>

--- a/devfile.yaml
+++ b/devfile.yaml
@@ -11,7 +11,7 @@
 #
 schemaVersion: 2.3.0
 attributes:
-  controller.devfile.io/storage-type: ephemeral
+  controller.devfile.io/storage-type: per-workspace
 metadata:
   name: che-operator
 components:
