--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -3995,7 +3995,7 @@ spec:
         description: |-
           The `CheCluster` custom resource allows defining and managing Eclipse Che server installation.
           Based on these settings, the  Operator automatically creates and maintains several ConfigMaps:
-          `che`, `plugin-registry`, `devfile-registry` that will contain the appropriate environment variables
+          `che`, `plugin-registry` that will contain the appropriate environment variables
           of the various components of the installation. These generated ConfigMaps must NOT be updated manually.
         properties:
           apiVersion:
@@ -4590,7 +4590,7 @@ spec:
                       used by the Che installation.
                     properties:
                       deployment:
-                        description: Deployment override options.
+                        description: Deprecated deployment override options.
                         properties:
                           containers:
                             description: List of containers belonging to the pod.
